# pgi-docgen

./: .dockerignore  .gitignore  MANIFEST.in  Makefile  README.rst  about.rst  azure-pipelines.yml  bootstrap.sh  build-all.sh  build-debian.py  build-devhelp.sh  build.bat  build.sh  build_all.sh  conf.in.py  conf.py  conf.py.in  debian-dpkg.py  default.sh  docbuild.py  docgen.py  docker-build.sh  fetch-doap.py  index.rst  pgi-docgen  pgi-docgen-build.py  pgi-docgen.py  pgidocgen.py  push.sh  pyproject.toml  setup.cfg  setup.py  single.sh  test.py
.circleci/: Dockerfile  config.yml  test-docker.sh  test.sh
.github/workflows/: build.yml  test.yml
data/: conf.in.py  get_theme.sh  index.html  theme.patch
data/doap/: Anjuta-3.0.doap  Atk-1.0.doap  Atspi-2.0.doap  BraseroMedia-3.1.doap  Caribou-1.0.doap  Champlain-0.12.doap  Cheese-3.0.doap  ClutterGst-1.0.doap  ClutterGst-2.0.doap  (+60 more)
doap/: Anjuta-3.0  Atk-1.0.doap  Atspi-2.0.doap  Caribou-1.0  ClutterGst-2.0  ColordGtk-1.0  CryptUI-0.0.doap  EBook-1.2.doap  GConf-2.0  GDesktopEnums-3.0.doap  GMenu-3.0  GModule-2.0.doap  GSSDP-1.0  GUPnP-1.0  GUPnPAV-1.0  GUPnPDLNAGst-2.0.doap  GUPnPIgd-1.0  GVnc-1.0.doap  GWeather-3.0.doap  GXPS-0.1.doap  Gck-1.doap  Gda-5.0.doap  GdkPixbuf-2.0.doap  Gdm-1.0.doap  Gee-0.8.doap  Gkbd-3.0.doap  GnomeBluetooth-1.0.doap  GnomeDesktop-3.0.doap  GnomeKeyring-1.0.doap  Goa-1.0  Grl-0.2  Gsf-1  Gucharmap-2.90.doap  LibvirtGLib-1.0  Notify-0.7.doap  PanelApplet-4.0  PeasGtk-1.0  SocialWebClient-0.25.doap
docker/: Dockerfile  build-docs-sphinx.sh  build-docs.sh  build-image.sh  build.sh  run.sh  test-docker.sh  test.sh
ext/: autosummary_fork.py
minimalism/: layout.html  relations.html
misc/: verify-debug.py
pgidocgen/: __init__.py  api.py  build.py  callback.py  compat.py  constants.py  create.py  create_debian.py  debian.py  debug.py  doap.py  docbook_escape.py  docobj.py  enum.py  fields.py  flags.py  funcsig.py  function.py  girdata.py  gtkdoc.py  gtkstock.py  hierarchy.py  klass.py  main.py  mapping.py  markdown.py  mergeindex.py  module.py  namespace.py  overrides.py  parser.py  repo.py  rstutil.py  structures.py  stuboverrides.py  stubs.py  tutorial.py  union.py  update_docref.py  update_girdata.py  (+1 more)
tests/: __init__.py  test_debug.py  test_doap.py  test_docbook_escape.py  test_docstrings.py  test_funcsig.py  test_girdata.py  test_gtkdoc.py  test_gtkstock.py  test_markdown.py  test_namespace.py  test_repo.py  test_util.py
theme/: README  layout.html  theme.conf
tools/: apt-find.py  bootstrap.sh  build-debian.py  build-devhelp.sh  build.sh  debian-dpkg.py  fetch-clsimages.py  fetch-debian-info.py  fetch-doap.py  fetch-docref.py  push-devhelp.sh  push.sh  serve.sh  verify-debug.py
tutorial/: README  import.rst  index.rst  make_screenshots.py  porting.rst  threads.rst
(+157 files in other folders)
