[tool.poetry]
name = "pgi-docgen"
version = "0.1.0"
description = ""
authors = ["Christoph Reiter <reiter.christoph@gmail.com>"]
readme = "README.rst"
packages = [{include = "pgidocgen"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pgi = {git = "https://github.com/pygobject/pgi.git"}
requests = "^2.22.0"
jinja2 = "^3.1.2"
sphinx = "^1.8.5"
cairocffi = "^1.0.2"
beautifulsoup4 = "^4.7.1"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
