[tool.poetry]
name = "pgi-docgen"
version = "0.1.0"
description = "Docs Generator for PGI/PyGObject"
authors = ["Christoph Reiter <reiter.christoph@gmail.com>"]
readme = "README.rst"
license = "LGPL-2.1-or-later"
homepage = "https://github.com/pygobject/pgi-docgen"
packages = [{include = "pgidocgen"}]

[tool.poetry.dependencies]
python = "^3.10"
pgi = {git = "https://github.com/pygobject/pgi.git"}
requests = "^2.28.2"
jinja2 = "^3.1.2"
sphinx = "^5.0.0"
cairocffi = "^1.5.1"
beautifulsoup4 = "^4.12.2"
lxml = "^5.1.0"
python-apt = { git="https://salsa.debian.org/apt-team/python-apt.git", tag="2.5.3", optional=true }

[tool.poetry.extras]
debian = ["python-apt"]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"
pytest = "^8.0.1"

[tool.poetry.scripts]
pgi-docgen = 'pgidocgen.main:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
